--- a/RFC 6979.md
+++ b/RFC 6979.md
@@ -40,6 +40,8 @@ RFC 6979 specifies a deterministic method for generating the nonce $k$ using HMA
 While RFC 6979 effectively mitigates known vulnerabilities related to nonce generation, it does not alter the fundamental mathematical structure of the $R_x$ table.
 
 ## 3. Topological Analysis Framework
+![image](https://github.com/user-attachments/assets/9a22117b-a87e-44e5-8803-e34e53405867)
+
 
 ### 3.1 The $R_x$ Table as a Topological Space
 
